hydromel/tests/errors/sem-invalid-assign-inst-port-mode.mel
#lang hydromel

# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

component C
    port x : in unsigned(32)
    port y : out unsigned(32)
    y = x
end

component D
    port x : in unsigned(32)
    instance c = C
    # ERROR: Port cannot be assigned
    c.y = x
end
